--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://101.53.155.156:3306/spring_boot_demo
 spring.datasource.username=spring_boot_demo
 spring.datasource.password=Ebrain@20
+server.port=8081
